--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,8 +1,11 @@
-<div class="top_title">
-  <h2>WordWolf</h2>
-  <p>-Majority vs Minority-</p>
-  <%= image_tag '/wolf.jpg' %>
-</div>
+<div class="main">
+  <div class="container">
+    <h2>WordWolf</h2>
+    <p>-Majority vs Minority-</p>
 
-<%= link_to '始める', 'users/new', class:"square_btn" %>
-<%= link_to 'ルール', 'http://www.google.co.jp/', class:"square_btn" %>
+    <div class="btn">
+      <%= link_to '始める', 'users/new', class:"square_btn" %>
+      <%= link_to 'ルール', 'http://www.google.co.jp/', class:"square_btn" %>
+    </div>
+  </div>
+</div>
