--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,33 @@
   </head>
 
   <body>
+    <header>
+
+      <div class="header-logo">
+        <%= link_to("Word Wolf", "/") %>
+      </div>
+      <ul class="header-menus">
+        <li>
+          <%= link_to("ゲームスタート", users_new_path) %>
+        </li>
+      </ul>
+    </header>
 
     <% if flash[:notice] %>
       <div class="flash">
         <%= flash[:notice] %>
       </div>
     <% end %>
-    
+
     <%= yield %>
+
+    <footer>
+      <ul>
+        <li>
+          <%= link_to("Created By Tomonori Sasaki", users_new_path) %>
+        </li>
+      </ul>
+    </footer>
+
   </body>
 </html>
