レイアウトの調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       </div>
       <ul class="header-menus">
         <li>
-          <%= link_to("ゲームスタート", users_new_path) %>
+          <%= link_to("New Game", users_new_path) %>
         </li>
       </ul>
     </header>
@@ -33,7 +33,7 @@
     <footer>
       <ul>
         <li>
-          <%= link_to("Created By Tomonori Sasaki", users_new_path) %>
+          Created by Tomonori Sasaki
         </li>
       </ul>
     </footer>
