--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -93,14 +93,14 @@ header {
 .header-menus li {
   float: left;
   line-height: 64px;
-  font-size: 13px;
+  font-size: 20px;
   color: white;
   padding-left: 15px;
 }
 
 .header-menus a {
   float: left;
-  font-size: 13px;
+  font-size: 20px;
   color: white;
 }
 
@@ -119,11 +119,25 @@ header {
 
 /* フッター ================================ */
 footer {
-  height: 30px;
   background-color: #3ecdc6;
-  position: absolute;
   z-index: 1;
+  position: fixed;
+  bottom: 0;
   width: 100%;
+  height: 40px;
+}
+
+footer ul {
+  float: right;
+  padding-right: 20px;
+}
+
+footer li {
+  float: left;
+  line-height: 40px;
+  font-size: 20px;
+  color: #FFFFFF;
+  padding-left: 15px;
 }
 
 /* フォーム================================ */
