--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,17 @@
-<%= link_to '戻る', '/' %>
-
-<div class="container">
-  <h2>プレイヤー人数は何名ですか？</h2>
-  <p>~3名以上~</p>
-
-  <%= form_tag("/users/create", method: "post") do %>
-    <%= label_tag(:num, "人数:") %>
-    <%= text_field_tag(:num) %>
-    <%= submit_tag("プレイヤー名設定へ") %>
-  <% end %>
+<div class="main">
+  <div class="container">
+    <h2>プレイヤー人数は何名ですか？</h2>
+    <p>※3以上の半角英数字でご記入ください。</p>
+    <%= form_tag("/users/create", method: "get") do %>
+      <%= label_tag(:num, "人数:") %>
+      <%= text_field_tag(:num) %>
+      <div class="">
+        <%= submit_tag("プレイヤー名設定へ") %>
+      </div>
+    <% end %>
+  </div>
 </div>
+
 
 <script type="text/javascript">
 
