--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       </div>
       <ul class="header-menus">
         <li>
-          <%= link_to("New Game", users_new_path) %>
+          <%= link_to("New Game", users_path) %>
         </li>
       </ul>
     </header>
