--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,5 @@
 <div class="main">
   <div class="container">
-    <h2>プレイヤー人数は何名ですか？</h2>
-    <p>※3以上の半角英数字でご記入ください。</p>
-    <%= form_tag("/users/create", method: "get") do %>
-      <%= label_tag(:num, "人数:") %>
-      <%= text_field_tag(:num) %>
-      <div class="">
-        <%= submit_tag("プレイヤー名設定へ") %>
-      </div>
-    <% end %>
+    <%= link_to 'OK', users_path, class:"square_btn" %>
   </div>
 </div>
-
-
-<script type="text/javascript">
-
-</script>
