モデルのカラムなどを変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,10 @@
       </div>
       <ul class="header-menus">
         <li>
-          <%= link_to("New Game", users_path) %>
+          <%= link_to("Rule", users_path) %>
+        </li>
+        <li>
+          <%= link_to("NewGame", users_path) %>
         </li>
       </ul>
     </header>
