--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -66,7 +66,7 @@ body {
 /* ヘッダー ================================ */
 header {
   height: 64px;
-  background-color: #3ecdc6;
+  background-color: #000080;
   position: absolute;
   z-index: 1;
   width: 100%;
@@ -119,7 +119,7 @@ header {
 
 /* フッター ================================ */
 footer {
-  background-color: #3ecdc6;
+  background-color: #000080;
   z-index: 1;
   position: fixed;
   bottom: 0;
@@ -200,13 +200,17 @@ footer li {
 
 
 // home#top
-.top_title img{
-  width: 80px;
-  height: 80px;
-  border-radius: 40%;
-  box-shadow: 0 2px 6px #c1ced7;
-  margin: 20px 0 10px;
-  object-fit: cover;
+.container h2{
+  text-align: center;
+}
+
+.container p{
+  text-align: center;
+}
+
+.btn{
+  margin: 10px auto;
+  text-align: center;
 }
 
 .square_btn{
@@ -219,6 +223,22 @@ footer li {
     border-radius: 3px;
 }
 .square_btn:active {/*ボタンを押したとき*/
+    -ms-transform: translateY(4px);
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);/*下に動く*/
+    border-bottom: none;/*線を消す*/
+}
+
+.square_btn_red{
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #FF00FF;/*ボタン色*/
+    color: #FFF;
+    border-bottom: solid 4px #C71585;
+    border-radius: 3px;
+}
+.square_btn_red:active {/*ボタンを押したとき*/
     -ms-transform: translateY(4px);
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*下に動く*/
