--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,4 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-//new==================================
+//index==================================
+.player-index{
+  padding-top: 10px;
+  text-align: center;
+}
+
+.pokemon img{
+  width: 100px;
+  height: 100px;
+  border-radius: 20%;
+  box-shadow: 0 4px 12px #c1ced7;
+  object-fit: cover;
+}
+
+.pokemon{
+  text-align: center;
+}
