--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,14 @@
 <div class="main">
   <div class="container">
-    <%= link_to 'OK', users_path, class:"square_btn" %>
+    <h2>好きなポケモンを選んでください</h2>
+    <div class="pokemon">
+      <%= link_to image_tag("sample1.png"), :action => "create", :image => "sample1.png", :method => :post %>
+      <%= link_to image_tag("sample2.png"), :action => "create" %>
+      <%= link_to image_tag("sample3.png"), :action => "create" %>
+      <%= link_to image_tag("sample4.png"), :action => "create" %>
+    </div>
+    <div class="btn">
+      <%= link_to '戻る', users_path, class:"square_btn" %>
+    </div>
   </div>
 </div>
