--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,10 @@
           <%= link_to("Rule", users_path) %>
         </li>
         <li>
-          <%= link_to("NewGame", users_path) %>
+          <%= link_to("Continue", users_path) %>
+        </li>
+        <li>
+          <%= link_to("NewGame", users_destroy_all_path, :method => :delete) %>
         </li>
       </ul>
     </header>
@@ -36,7 +39,7 @@
     <footer>
       <ul>
         <li>
-          Created by Tomonori Sasaki
+          <%= link_to("Created by Tomonori Sasaki", 'https://www.facebook.com/profile.php?id=100005307370876') %>
         </li>
       </ul>
     </footer>
