--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,13 +7,16 @@
     </div>
     <div class="pokemon">
       <h2>～選ばれしデュエリストたち～</h2>
-      <% @users.each do |user| %>
-        <%= link_to image_tag("#{user.image}"), "#" %>
+      <% @users.each_with_index do |user,index| %>
+        <div class="character-icon">
+          <%= link_to image_tag("#{user.image}"), "#" %>
+          <p><%= user.name %></p>
+        </div>
       <% end %>
     </div>
     <div class="btn">
-      <%= link_to '削除', "#", class:"square_btn_red" %>
-      <%= link_to '全て削除', "#", class:"square_btn_red" %>
+      <%= link_to '削除', user_path(1), :method => :delete, class:"square_btn_red" %>
+      <%= link_to '全て削除', users_destroy_all_path, :method => :delete, class:"square_btn_red" %>
     </div>
   </div>
 </div>
