--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -70,3 +70,13 @@ input[type="submit"]:active {
   transform: translateY(4px);/*下に動く*/
   border-bottom: none;/*線を消す*/
 }
+
+//not_seen==================================
+
+.subject{
+  padding-top: 20px;
+}
+
+.subject h2{
+  padding-top: 10px;
+}
