--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,5 +18,8 @@
     <div class="btn">
       <%= link_to '戻る', users_path, class:"square_btn" %>
     </div>
+    <div class="maruc">
+      <p>&copy;<%= link_to 'eSports Runner', 'http://esports-runner.com/' %></p>
+    </div>
   </div>
 </div>
