--- a/app/views/users/subject.html.erb
+++ b/app/views/users/subject.html.erb
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="container">
     <div class="pokemon">
-        <div class="character-icon">
+        <div class="character-icon-for-not-seen">
           <%= link_to image_tag("#{@user.image}"), "#" %>
           <p><%= @user.name %></p>
         </div>
