--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -215,7 +215,12 @@ footer a {
 }
 
 .btn{
-  margin: 10px auto;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.btn-margin-top{
+  margin: 50px auto;
   text-align: center;
 }
 
@@ -249,6 +254,11 @@ footer a {
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*下に動く*/
     border-bottom: none;/*線を消す*/
+}
+
+// home#rule
+.google img{
+  width: 50%;
 }
 
 /* フラッシュ ================================ */
