--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -39,9 +39,18 @@
 .character-icon{
   width: 100px;
   display: inline-block;
+  padding-top: 20px;
+}
+
+//new==================================
+.maruc{
+  float: right;
 }
 
 //setting==================================
+.setting{
+  padding-bottom: 20px;
+}
 
 input[type="text"]{
   outline: none;
@@ -79,4 +88,49 @@ input[type="submit"]:active {
 
 .subject h2{
   padding-top: 10px;
+}
+
+.character-icon-for-not-seen{
+  width: 100px;
+  display: inline-block;
+}
+
+//result==================================
+
+.pokemon img{
+  width: 100px;
+  height: 100px;
+  border-radius: 20%;
+  box-shadow: 0 4px 12px #c1ced7;
+  object-fit: cover;
+}
+
+.pokemon{
+  text-align: center;
+}
+
+.pokemon p{
+  display: block;
+}
+
+.result-icon{
+  width: 180px;
+  display: inline-block;
+  padding-top: 20px;
+}
+
+.gold{
+  border: inset 10px #FFD700;
+}
+
+.silver{
+  border: inset 10px #C0C0C0;
+}
+
+.copper{
+  border: inset 10px #B22222;
+}
+
+.blue{
+  border: inset 10px #0000FF;
 }
