--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -4,7 +4,7 @@
     <p>-Majority vs Minority-</p>
     <div class="btn">
       <%= link_to '始める', users_path, class:"square_btn" %>
-      <%= link_to 'ルール', 'http://www.google.co.jp/', class:"square_btn" %>
+      <%= link_to 'ルール', home_rule_path, class:"square_btn" %>
     </div>
   </div>
 </div>
