--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
       </div>
       <ul class="header-menus">
         <li>
-          <%= link_to("Rule", users_path) %>
+          <%= link_to("NewGame", users_destroy_all_path, :method => :delete) %>
         </li>
         <li>
           <%= link_to("Continue", users_path) %>
         </li>
         <li>
-          <%= link_to("NewGame", users_destroy_all_path, :method => :delete) %>
+          <%= link_to("Record", users_record_path) %>
         </li>
       </ul>
     </header>
