--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,18 +2,10 @@
   <div class="container">
     <h2>好きなキャラクターを選択してください</h2>
     <div class="character">
-      <%= link_to image_tag("sample1.png"), users_path(@user, image: 'sample1.png'), :method => :post %>
-      <%= link_to image_tag("sample2.png"), users_path(@user, image: 'sample2.png'), :method => :post %>
-      <%= link_to image_tag("sample3.png"), users_path(@user, image: 'sample3.png'), :method => :post %>
-      <%= link_to image_tag("sample4.png"), users_path(@user, image: 'sample4.png'), :method => :post %>
-      <%= link_to image_tag("sample5.png"), users_path(@user, image: 'sample5.png'), :method => :post %>
-      <%= link_to image_tag("sample6.png"), users_path(@user, image: 'sample6.png'), :method => :post %>
-      <%= link_to image_tag("sample7.png"), users_path(@user, image: 'sample7.png'), :method => :post %>
-      <%= link_to image_tag("sample8.png"), users_path(@user, image: 'sample8.png'), :method => :post %>
-      <%= link_to image_tag("sample9.png"), users_path(@user, image: 'sample9.png'), :method => :post %>
-      <%= link_to image_tag("sample10.png"), users_path(@user, image: 'sample10.png'), :method => :post %>
-      <%= link_to image_tag("sample11.png"), users_path(@user, image: 'sample11.png'), :method => :post %>
-      <%= link_to image_tag("sample12.png"), users_path(@user, image: 'sample12.png'), :method => :post %>
+      <% images = ['sample1.png', 'sample2.png', 'sample3.png', 'sample4.png', 'sample5.png', 'sample6.png', 'sample7.png', 'sample8.png', 'sample9.png', 'sample10.png', 'sample11.png', 'sample12.png'] %>
+      <% images.each do |image| %>
+        <%= link_to image_tag(image), users_path(@user, image: image), :method => :post %>
+      <% end %>
     </div>
     <div class="btn">
       <%= link_to '戻る', users_path, class:"square_btn" %>
