--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       </div>
       <ul class="header-menus">
         <li>
-          <%= link_to("NewGame", users_destroy_all_path, :method => :delete) %>
+          <%= link_to("NewGame", users_destroy_all_path, :method => :delete, :data => {:confirm => '全てのプレイヤーを消去して新しいゲームを開始しますが、よろしいですか？'}) %>
         </li>
         <li>
           <%= link_to("Continue", users_path) %>
