--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,7 @@
     </div>
     <div class="btn">
       <%= link_to '削除', user_path(1), :method => :delete, class:"square_btn_red" %>
-      <%= link_to '全て削除', users_destroy_all_path, :method => :delete, class:"square_btn_red" %>
+      <%= link_to '全て削除', users_destroy_all_path, :method => :delete, :data => {:confirm => 'ほんまにそれでええんやな？'}, class:"square_btn_red" %>
     </div>
   </div>
 </div>
