--- a/app/views/home/rule.html.erb
+++ b/app/views/home/rule.html.erb
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="container">
     <div class="btn-margin-top">
-      <%= link_to image_tag("google.gif"), 'http://www.google.co.jp/', class:"google" %>
+      <%= link_to 'Google', 'http://www.google.co.jp/', class:"google_btn" %>
     </div>
   </div>
 </div>
