--- a/app/views/users/not_seen.html.erb
+++ b/app/views/users/not_seen.html.erb
@@ -16,3 +16,10 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  window.location.hash="#noback";
+  window.onhashchange=function(){
+    window.location.hash="#noback";
+  }
+</script>
