--- a/app/views/users/start.html.erb
+++ b/app/views/users/start.html.erb
@@ -7,3 +7,10 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  window.location.hash="#noback";
+  window.onhashchange=function(){
+    window.location.hash="#noback";
+  }
+</script>
