--- a/app/views/users/vote.html.erb
+++ b/app/views/users/vote.html.erb
@@ -22,3 +22,8 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  window.onunload = function() {};
+  history.forward();
+</script>
