--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -6,5 +6,31 @@
       <%= link_to '始める', users_path, class:"square_btn" %>
       <%= link_to 'ルール', home_rule_path, class:"square_btn" %>
     </div>
+    <div class="share-icon">
+      <!--twitter-->
+      <a class="share_btn2 shtw">
+      <i class="fa fa-twitter"></i>
+      </a>
+      <!--facebook-->
+      <a class="share_btn2 shfb">
+      <i class="fa fa-facebook"></i>
+      </a>
+      <!--はてぶ-->
+      <a class="share_btn2 shhtb">
+      B!
+      </a>
+      <!--pocket-->
+      <a class="share_btn2 shpkt">
+      <i class="fa fa-get-pocket"></i>
+      </a>
+      <!--feedly-->
+      <a class="share_btn2 shfdly">
+      <i class="fa fa-rss"></i>
+      </a>
+      <!--googleplus-->
+      <a class="share_btn2 shgp">
+      <i class="fa fa-google-plus"></i>
+      </a>
+    </div>
   </div>
 </div>
