アプリ拡散機能の付加

--- a/app/views/users/result.html.erb
+++ b/app/views/users/result.html.erb
@@ -16,5 +16,34 @@
       <%= link_to '次のゲーム', users_path, class:"square_btn" %>
       <%= link_to '終了', "/", class:"square_btn_red" %>
     </div>
+
+    <div class="share-icon">
+      <h3>よろしければアプリを拡散してください</h3>
+      <!--twitter-->
+      <a href="https://twitter.com/login?lang=ja" class="share_btn2 shtw">
+      <i class="fa fa-twitter"></i>
+      </a>
+      <!--facebook-->
+      <a href="https://www.facebook.com/" class="share_btn2 shfb">
+      <i class="fa fa-facebook"></i>
+      </a>
+      <!--はてぶ-->
+      <a href="https://www.hatena.ne.jp/login" class="share_btn2 shhtb">
+      B!
+      </a>
+      <!--pocket-->
+      <a href="https://getpocket.com/login" class="share_btn2 shpkt">
+      <i class="fa fa-get-pocket"></i>
+      </a>
+      <!--feedly-->
+      <a href="https://feedly.com/v3/auth/login?state=A1xWBk7VsAPsTT_5MxdV652jgS2Z8qkU7gtkTAfpyEACU3Njpx7hAEfhNhcMUzKR3LjLbIpkBva_cC_AN-E9V457oPdXQfsLH27kO5geoCgIqNMVKogikwtiemKnP5Qv2N24A1QJ_Q" class="share_btn2 shfdly">
+      <i class="fa fa-rss"></i>
+      </a>
+      <!--googleplus-->
+      <a href="https://plus.google.com/?hl=ja" class="share_btn2 shgp">
+      <i class="fa fa-google-plus"></i>
+      </a>
+    </div>
+
   </div>
 </div>
