--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -7,28 +7,29 @@
       <%= link_to 'ルール', home_rule_path, class:"square_btn" %>
     </div>
     <div class="share-icon">
+      <h3>よろしければアプリを拡散してください</h3>
       <!--twitter-->
-      <a class="share_btn2 shtw">
+      <a href="https://twitter.com/login?lang=ja" class="share_btn2 shtw">
       <i class="fa fa-twitter"></i>
       </a>
       <!--facebook-->
-      <a class="share_btn2 shfb">
+      <a href="https://www.facebook.com/" class="share_btn2 shfb">
       <i class="fa fa-facebook"></i>
       </a>
       <!--はてぶ-->
-      <a class="share_btn2 shhtb">
+      <a href="https://www.hatena.ne.jp/login" class="share_btn2 shhtb">
       B!
       </a>
       <!--pocket-->
-      <a class="share_btn2 shpkt">
+      <a href="https://getpocket.com/login" class="share_btn2 shpkt">
       <i class="fa fa-get-pocket"></i>
       </a>
       <!--feedly-->
-      <a class="share_btn2 shfdly">
+      <a href="https://feedly.com/v3/auth/login?state=A1xWBk7VsAPsTT_5MxdV652jgS2Z8qkU7gtkTAfpyEACU3Njpx7hAEfhNhcMUzKR3LjLbIpkBva_cC_AN-E9V457oPdXQfsLH27kO5geoCgIqNMVKogikwtiemKnP5Qv2N24A1QJ_Q" class="share_btn2 shfdly">
       <i class="fa fa-rss"></i>
       </a>
       <!--googleplus-->
-      <a class="share_btn2 shgp">
+      <a href="https://plus.google.com/?hl=ja" class="share_btn2 shgp">
       <i class="fa fa-google-plus"></i>
       </a>
     </div>
